<resources>
    <string name="app_name">gutierrez_gonzalez</string>
    <string name="delete">Eliminar</string>
    <string name="txt_Listado">Listado de Productos</string>
    <string name="txtDetalle">Detalle Producto</string>
    <string name="log">LOGIN</string>
    <string name="email">Correo Electrónico</string>
    <string name="pw">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="reg">Registrar</string>
    <string name="price">Precio</string>
    <string name="name">Nombre</string>
    <string name="imagen">Imagen</string>
    <string name="add">Agregar Producto</string>
    <string name="inicio">Inicio</string>
    <string name="cerrar">log Out</string>
    <string name="producto">Nombre del producto</string>
    <string name="precio">Valor</string>
    <string name="img">Imagen</string>
    <string name="editar">Editar\n</string>
    <string name="title_activity_formulario_editar">FormularioEditar</string>
</resources>